# occ-jswrap-generator

./: .clang_complete  .eslintrc  .gcc-flags__.json  .gitignore  CMakeLists.txt  README.md  findAbstractReturnTypes.js  gulpfile.js  package.json  runtests.js  settings.json  test.js
configuration/: test.js
data/: cannot-parse.json  ignore_headers.json  toolkits.json
data/headers/: Adaptor2d.json  Adaptor3d.json  AdvApp2Var.json  AdvApprox.json  AppBlend.json  AppCont.json  Approx.json  ApproxInt.json  BRep.json  BRepAdapor.json  BRepApprox.json  BRepBndLib.json  BRepBuilderAPI.json  BRepCheck.json  BRepClass.json  BRepClass3d.json  BRepExtrema.json  BRepFilletAPI.json  BRepGProp.json  BRepIntCurveSurface.json  BRepLProp.json  BRepLib.json  BRepMAT2d.json  BRepPrim.json  BRepPrimAPI.json  BRepSweep.json  BRepTools.json  BRepTopAdaptor.json  BSplCLib.json  BSplSLib.json  Bisector.json  Blend.json  Bnd.json  BndLib.json  CPnts.json  CSLib.json  ChFi2d.json  ChFi3d.json  ChFiDS.json  Convert.json  (+88 more)
lib/: configurator.js  configure.js  containerMixin.js  factory.js  nativeAPI.js  render.js  renderer.js  settings.js  typemap.js  util.js
lib/configuration/: argument.js  base.js  builder.js  builtin.js  callable.js  class.js  collection.js  enum.js  (+5 more)
spec/: configurationSpec.js  definitionSpec.js  nativeAPISpec.js  renderSpec.js  typemapSpec.js  wrappedAPISpec.js  wrapperSpec.js
src/: configure.js  containerMixin.js  factory.js  nativeAPI.js  newRender.js  render.js  settings.js  typemap.js  util.js  wrappedAPI.js
tasks/: generator-tests.js  main.js
wrapper/: test.js
(+115 files in other folders)
